--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,11 +4,278 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>小米有品</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../images/iconfont/iconfont.css">
+    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="../css/foot.css">
+    <script src="../js/index.js" type="module"></script>
 </head>
 
 <body>
-    hello
+    <div class="head-top">
+        <div class="clearfix">
+            <div class="fr">
+
+                <li><a href="">登录</a><a href="./login.html">注册</a><span class="borde"></span></li>
+
+                <li><a href="">帮助中心</a><span class="borde"></span></li>
+
+                <li><a href=""><span class="iconfont icon-shouji"></span>下载app</a><span class="borde"></span></li>
+
+                <li><a href="">直播</a> <span class="borde"></span></li>
+
+                <li><a href="" style="vertical-align: middle;">资格证照/协议规则</a>
+                    <span class="iconfont icon-ai-arrow-down"></span>
+                    <ul>
+                        <li>格证照/协议规</li>
+                        <li>格证照/协议规</li>
+                    </ul>
+                </li>
+
+            </div>
+        </div>
+    </div>
+    <div class="head-clearfix">
+        <div class="clearfix-box">
+            <div class="ypimg"></div>
+            <div class="nav-part"></div>
+            <ul class="tab-list">
+                <li>限时抢购</li>
+                <li>企业采购</li>
+            </ul>
+            <span class="iconfont icon-gouwuche"></span>
+            <div class="search">
+                <span class="iconfont icon-fangdajing"></span>
+                <div class="search-input">
+                    <input type="text" placeholder="搜一搜">
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="banner-nav">
+        <div class="nav-container">
+            <ul>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+                <li>
+                    <span class="item-span">有品推荐</span><span>/</span>
+                    <span class="item-span">家用电器</span>
+                </li>
+            </ul>
+        </div>
+        <div class="banner-box swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="../images/lbt1.jpeg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="../images/lbt1.jpeg" alt="">
+                </div>
+                <div class="swiper-slide"> <img src="../images/lbt2.jpeg" alt=""></div>
+                <div class="swiper-slide"> <img src="../images/lbt2.jpeg" alt=""></div>
+                <div class="swiper-slide"> <img src="../images/lbt3.jpeg" alt=""></div>
+                <div class="swiper-slide"> <img src="../images/lbt3.jpeg" alt=""></div>
+            </div>
+            <!-- 如果需要分页器 -->
+            <div class="swiper-pagination"></div>
+
+            <!-- 如果需要导航按钮 -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <!-- 如果需要滚动条 -->
+            <!-- <div class="swiper-scrollbar"></div> -->
+
+        </div>
+    </div>
+    <div class="container-p">
+        <ul>
+            <li>
+                <div>
+                    <img src="../images/tu1.png" alt=""><span></span>
+                </div>
+                <p>每日新品</p>
+            </li>
+            <li>
+                <div>
+                    <img src="../images/tu2.png" alt=""><span></span>
+                </div>
+                <p>小米众筹</p>
+            </li>
+            <li>
+                <div>
+                    <img src="../images/tu3.png" alt=""><span></span>
+                </div>
+                <p>有品秒杀</p>
+            </li>
+            <li>
+                <div>
+                    <img src="../images/tu4.png" alt=""><span></span>
+                </div>
+                <p>热销榜单</p>
+            </li>
+            <li>
+                <div>
+                    <img src="../images/tu5.png" alt=""><span></span>
+                </div>
+                <p>小米自营</p>
+            </li>
+        </ul>
+    </div>
+    <div class="head-section">
+        <div class="container-clearfix">
+            <div class="h-subTit">
+                小米有品众筹
+                <span>永远好奇，永远年轻</span>
+                <span class="more"><a href=""> 更多</a><a href=""></a></span><span></span>
+            </div>
+            <div class="m-sec-main">
+                <div class="home-good-item1">
+                    <div class="item-inner">
+                        <div class="inner">
+                            <p class="pro-info">
+                                手持打印机
+                            </p>
+                            <p class="pro-desc">
+                                便携无线打印，DIY图案，即兴涂鸦...
+                            </p>
+                            <p class="pro-price">
+                                <span class="tag">¥</span><span>299</span>
+                                <span class="pro-flag">起</span></p>
+                        </div>
+                        <img src="../images/p1.png" alt="">
+                    </div>
+                    <div class="line"></div>
+                    <div class="m-progress-info">
+                        <div class="sup">
+                            <span class="sup-num">6169</span>人支持</div>
+                        <span class="fl">
+                                <span class="icon-f" style="background-color: rgb(249, 135, 0);">火</span></span>
+                        <div class="fr">
+                            <div><span class="m-num">308</span><span class="m-bai">%</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="home-good-item2">
+                    <div class="item-inner">
+                        <div class="inner">
+                            <p class="pro-info">小米纪念金章</p>
+                            <p class="pro-price"><span class="tag">¥</span><span>1482</span><span class="pro-flag">起</span></p>
+                            <img src="../images/p2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="m-progress-info">
+                        <div class="sup">
+                            <span class="sup-num">3132</span>人支持</div>
+                        <span class="fl">
+                                <span class="icon-f" style="background-color: #f62700;">爆</span></span>
+                        <div class="fr">
+                            <div><span class="m-num">308</span><span class="m-bai">%</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="home-good-item3">
+                    <div class="item-inner">
+                        <div class="inner">
+                            <p class="pro-info">智能垃圾桶</p>
+                            <p class="pro-price"><span class="tag">¥</span><span>1482</span><span class="pro-flag">起</span></p>
+                            <img src="../images/p3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="m-progress-info">
+                        <div class="sup">
+                            <span class="sup-num">9162</span>人支持</div>
+                        <span class="fl">
+                                <span class="icon-f" style="background-color: #fecf00;">热</span></span>
+                        <div class="fr">
+                            <div><span class="m-num">308</span><span class="m-bai">%</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="main-box">
+        <div class="container">
+            <div class="h-subTit">
+                专属推荐
+            </div>
+            <div class="sp"></div>
+            <!-- <div class="sp"></div>
+            <div class="sp"></div>
+            <div class="sp"></div> -->
+        </div>
+
+    </div>
+    <div class="foot-box">
+        <div class="cont">
+            <img src="../images/logo@2x.cf8cc6a8.png" alt="">
+            <img src="../images/f-logo.c6285587.png" alt="">
+            <div class="text">
+                <p>
+                    <span>©xiaomiyoupin.com</span>
+                    <span>苏B2-20180351 苏ICP备18025642号-1 </span>
+                    <a href="" class="jing"><span><img src="../images/ghs.png" alt=""></span>京公网安备11010802020134号</a>
+                </p>
+                <p>
+                    <span>企业名称：有品信息科技有限公司 </span>
+                    <a href="">关于我们</a>
+                    <a href="">入住有品</a>
+                    <a href="">知识产权侵权投诉</a>
+                </p>
+                <p>
+                    <span>
+                        小米有品平台运行主体更新公告
+                    </span>
+                </p>
+                <p>
+                    南京市建邺区白龙江东街8号3栋9层
+                </p>
+            </div>
+
+        </div>
+    </div>
+
 </body>
 
 </html>
