--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../images/iconfont/iconfont.css">
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../css/foot.css">
     <script src="../js/index.js" type="module"></script>
 </head>
 
@@ -240,12 +239,134 @@
             <div class="h-subTit">
                 专属推荐
             </div>
-            <div class="sp"></div>
-            <!-- <div class="sp"></div>
-            <div class="sp"></div>
-            <div class="sp"></div> -->
-        </div>
+            <div class="main">
+                <div>
+                    <div>
+                        <img src="../images/sp1.webp" alt="">
+                    </div>
+                    <p>为跑步而生，快速定位检测心...</p>
+                    <div class="ft">
+                        <div class="d1">
 
+                        </div>
+                        <p class="p1">宜准智能专业跑步表 运...</p>
+                        <p class="p2">
+                            <span class="s1">￥</span>
+                            <span class="s2">233</span>
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="../images/sp1.webp" alt="">
+                    </div>
+                    <p>为跑步而生，快速定位检测心...</p>
+                    <div class="ft">
+                        <div class="d1">
+
+                        </div>
+                        <p class="p1">宜准智能专业跑步表 运...</p>
+                        <p class="p2">
+                            <span class="s1">￥</span>
+                            <span class="s2">233</span>
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="../images/sp1.webp" alt="">
+                    </div>
+                    <p>为跑步而生，快速定位检测心...</p>
+                    <div class="ft">
+                        <div class="d1">
+
+                        </div>
+                        <p class="p1">宜准智能专业跑步表 运...</p>
+                        <p class="p2">
+                            <span class="s1">￥</span>
+                            <span class="s2">233</span>
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="../images/sp1.webp" alt="">
+                    </div>
+                    <p>为跑步而生，快速定位检测心...</p>
+                    <div class="ft">
+                        <div class="d1">
+
+                        </div>
+                        <p class="p1">宜准智能专业跑步表 运...</p>
+                        <p class="p2">
+                            <span class="s1">￥</span>
+                            <span class="s2">233</span>
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="../images/sp1.webp" alt="">
+                    </div>
+                    <p>为跑步而生，快速定位检测心...</p>
+                    <div class="ft">
+                        <div class="d1">
+
+                        </div>
+                        <p class="p1">宜准智能专业跑步表 运...</p>
+                        <p class="p2">
+                            <span class="s1">￥</span>
+                            <span class="s2">233</span>
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="../images/sp2.webp" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="../images/sp3.webp" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="../images/sp4.webp" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fixed-box">
+        <ul>
+            <li class="l1">
+                <span class="iconfont icon-tongyong-lianxikefutubiao
+                "></span>
+                <p>联系客服</p>
+            </li>
+            <li class="l2">
+                <span class="iconfont icon-saoma
+                "></span>
+                <p>下载APP</p>
+            </li>
+            <li class="l3">
+                <span class="iconfont icon-lihe
+                "></span>
+                <p>新人有礼</p>
+            </li>
+            <li class="l4">
+                <span class="iconfont icon-weixin
+                "></span>
+                <p>关注微信</p>
+            </li>
+            <li class="l5">
+                <span class="iconfont icon-huojian
+                "></span>
+                <p>回到顶部
+                </p>
+            </li>
+        </ul>
     </div>
     <div class="foot-box">
         <div class="cont">
