--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -44,7 +44,9 @@
                 <li>限时抢购</li>
                 <li>企业采购</li>
             </ul>
-            <span class="iconfont icon-gouwuche"></span>
+            <a href="http://localhost/mi.com/src/html/cart.html">
+                <span class="iconfont icon-gouwuche"></span>
+            </a>
             <div class="search">
                 <span class="iconfont icon-fangdajing"></span>
                 <div class="search-input">
@@ -63,7 +65,7 @@
             <a href="">购物车</a>
         </div>
         <div class="title">
-            <a href="" class="cheack"></a>
+            <a href="javascript:;" class="cheack2"></a>
             <span class="all-txt">全选</span>
             <span class="product">商品信息</span>
             <span class="price">单价</span>
@@ -72,15 +74,16 @@
             <span class="edit">操作</span>
         </div>
         <div class="shangpin">
+
             <div class="shangjia">
-                <span class="cheack"></span>
+                <span class="cheack2"></span>
                 <span class="name">有品精选</span>
                 <div class="rt">
                     <span class="tu"></span>
                     <span class="text">满99元免运费</span>
                 </div>
             </div>
-            <div class="cart-item">
+            <!-- <div class="cart-item">
                 <div class="select">
                     <span class="cheack"></span>
                 </div>
@@ -95,10 +98,9 @@
                 </div>
                 <div class="num">
                     <div class="edit">
-                        <a href=""></a>
-                        <span>
-                            <span class="text">1</span>
-                        </span>
+                        <a href="" class="reduce"></a>
+                        <input type="text" value="1" min="1" max="10" readonly>
+                        <a href="" class="add"></a>
                     </div>
                 </div>
                 <div class="subtotal">
@@ -107,39 +109,11 @@
                 <div class="del">
                     <a href=""></a>
                 </div>
-            </div>
-            <div class="cart-item">
-                <div class="select">
-                    <span class="cheack"></span>
-                </div>
-                <div class="images">
-                    <img src="../images/pic1.png@base@tag=imgScale&F=webp" alt=""><span></span>
-                </div>
-                <div class="name">
-                    <p>最生活长绒棉吸水毛巾 3条装 男生款（白*1+绿*1+蓝*1）</p>
-                </div>
-                <div class="price">
-                    <span>￥233</span>
-                </div>
-                <div class="num">
-                    <div class="edit">
-                        <a href=""></a>
-                        <span>
-                            <span class="text">1</span>
-                        </span>
-                    </div>
-                </div>
-                <div class="subtotal">
-                    <span>￥233</span>
-                </div>
-                <div class="del">
-                    <a href=""></a>
-                </div>
-            </div>
+            </div> -->
         </div>
         <div class="cart-foot">
             <div class="lf">
-                <span class="cheack"></span>
+                <span class="all"></span>
                 <span class="select">全选</span>
                 <span class="arealy-select">已选0件</span>
             </div>
