--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,7 @@
         <div class="clearfix">
             <div class="fr">
 
-                <li><a href="">登录</a><a href="./login.html">注册</a><span class="borde"></span></li>
+                <li><a href="http://localhost/mi.com/src/html/login.html">登录</a><a href="http://localhost/mi.com/src/html/register.html">注册</a><span class="borde"></span></li>
 
                 <li><a href="">帮助中心</a><span class="borde"></span></li>
 
@@ -44,7 +44,9 @@
                 <li>限时抢购</li>
                 <li>企业采购</li>
             </ul>
-            <span class="iconfont icon-gouwuche"></span>
+            <a href="http://localhost/mi.com/src/html/cart.html">
+                <span class="iconfont icon-gouwuche"></span>
+            </a>
             <div class="search">
                 <span class="iconfont icon-fangdajing"></span>
                 <div class="search-input">
@@ -55,7 +57,7 @@
         </div>
 
     </div>
-    <div class="head-clearfix  hide">
+    <!-- <div class="head-clearfix" id="hide">
         <div class="clearfix-box">
             <div class="ypimg"></div>
             <div class="nav-part"></div>
@@ -73,7 +75,7 @@
 
         </div>
 
-    </div>
+    </div> -->
     <div class="banner-nav">
         <div class="nav-container">
             <ul>
@@ -248,6 +250,26 @@
                 </div>
             </div>
         </div>
+
+    </div>
+    <div class="swiper-container swiper-container2">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"> <img data-original="../images/lbt1.jpeg" alt=""></div>
+            <div class="swiper-slide"> <img data-original="../images/lbt2.jpeg" alt=""></div>
+            <div class="swiper-slide"> <img data-original="../images/lbt2.jpeg" alt=""></div>
+            <div class="swiper-slide"> <img data-original="../images/lbt2.jpeg" alt=""></div>
+            <div class="swiper-slide"> <img data-original="../images/lbt3.jpeg" alt=""></div>
+            <div class="swiper-slide"> <img data-original="../images/lbt3.jpeg" alt=""></div>
+        </div>
+        <!-- 如果需要分页器 -->
+        <div class="swiper-pagination swiper-pagination2"></div>
+
+        <!-- 如果需要导航按钮 -->
+        <div class="swiper-button-prev swiper-button-prev2"></div>
+        <div class="swiper-button-next swiper-button-next2"></div>
+
+        <!-- 如果需要滚动条 -->
+        <!-- <div class="swiper-scrollbar"></div> -->
 
     </div>
     <div class="main-box">
