--- a/src/html/login.html
+++ b/src/html/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/login.css">
+    <script src="../js/login.js" type="module"></script>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
                     <input type="button" class="login_btn" value="登录">
                     <a href="" class="login_link">手机短信登录注册</a>
                     <div class="link_box">
-                        <a href="">立即注册</a>
+                        <a href="./register.html">立即注册</a>
                         <span>|</span>
                         <a href="">忘记密码</a>
                     </div>
