--- a/src/html/sp.html
+++ b/src/html/sp.html
@@ -42,7 +42,9 @@
                 <li>限时抢购</li>
                 <li>企业采购</li>
             </ul>
-            <span class="iconfont icon-gouwuche"></span>
+            <a href="http://localhost/mi.com/src/html/cart.html">
+                <span class="iconfont icon-gouwuche"></span>
+            </a>
             <div class="search">
                 <span class="iconfont icon-fangdajing"></span>
                 <div class="search-input">
